# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
